[gd_scene load_steps=34 format=3 uid="uid://hiruv1l6x7hh"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_uyc4y"]
[ext_resource type="FontFile" uid="uid://6t41kx6p1hri" path="res://Assets/Font/QuinqueFive.otf" id="2_akliq"]
[ext_resource type="Texture2D" uid="uid://1bdvd6pt2ktd" path="res://Assets/Kings and Pigs/Sprites/14-TileSets/Terrain (32x32).png" id="3_iedvj"]
[ext_resource type="Texture2D" uid="uid://b7sbeetauvpyt" path="res://Assets/Kings and Pigs/Sprites/06-Pig Hide in the Box/Looking Out (26x20).png" id="4_cvwqk"]
[ext_resource type="Texture2D" uid="uid://dohiy8rd7cjxm" path="res://Assets/Kings and Pigs/Sprites/01-King Human/Idle (78x58).png" id="5_j7d8w"]
[ext_resource type="Texture2D" uid="uid://di3ywju7v02i2" path="res://Assets/Kings and Pigs/Sprites/04-Pig Throwing a Box/Idle (26x30).png" id="6_o7pyx"]
[ext_resource type="AudioStream" uid="uid://byxbv76ja5qmu" path="res://Assets/Music/8bit-music-for-game-68698.mp3" id="7_owier"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kkw5q"]
texture = ExtResource("3_iedvj")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
32:2/0 = 0
33:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
10:3/0 = 0
11:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
32:3/0 = 0
33:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
10:4/0 = 0
11:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:5/0 = 0
11:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
10:10/0 = 0
11:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
10:11/0 = 0
11:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
10:14/0 = 0
11:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
32:14/0 = 0
33:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
10:15/0 = 0
11:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
10:16/0 = 0
11:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
32:16/0 = 0
33:16/0 = 0
34:16/0 = 0
35:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
10:17/0 = 0
11:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
32:17/0 = 0
33:17/0 = 0
34:17/0 = 0
35:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
10:18/0 = 0
11:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
10:19/0 = 0
11:19/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
32:20/0 = 0
33:20/0 = 0
34:20/0 = 0
35:20/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
32:21/0 = 0
33:21/0 = 0
34:21/0 = 0
35:21/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
10:22/0 = 0
11:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
32:22/0 = 0
33:22/0 = 0
34:22/0 = 0
35:22/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
10:23/0 = 0
11:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
32:23/0 = 0
33:23/0 = 0
34:23/0 = 0
35:23/0 = 0

[sub_resource type="TileSet" id="TileSet_8xhiy"]
sources/0 = SubResource("TileSetAtlasSource_kkw5q")

[sub_resource type="AtlasTexture" id="AtlasTexture_0nwo4"]
atlas = ExtResource("4_cvwqk")
region = Rect2(52, 0, 26, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxicx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nwo4")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_la51n"]
atlas = ExtResource("5_j7d8w")
region = Rect2(0, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8w6t"]
atlas = ExtResource("5_j7d8w")
region = Rect2(78, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6ko6"]
atlas = ExtResource("5_j7d8w")
region = Rect2(156, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_xquv6"]
atlas = ExtResource("5_j7d8w")
region = Rect2(234, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_82eui"]
atlas = ExtResource("5_j7d8w")
region = Rect2(312, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysfpt"]
atlas = ExtResource("5_j7d8w")
region = Rect2(390, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv8tn"]
atlas = ExtResource("5_j7d8w")
region = Rect2(468, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_8olec"]
atlas = ExtResource("5_j7d8w")
region = Rect2(546, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_apsld"]
atlas = ExtResource("5_j7d8w")
region = Rect2(624, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_lykg2"]
atlas = ExtResource("5_j7d8w")
region = Rect2(702, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_gya0n"]
atlas = ExtResource("5_j7d8w")
region = Rect2(780, 0, 78, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_yra7j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_la51n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8w6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6ko6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xquv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82eui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysfpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv8tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8olec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apsld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lykg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gya0n")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cwt3b"]
atlas = ExtResource("6_o7pyx")
region = Rect2(0, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8l7i"]
atlas = ExtResource("6_o7pyx")
region = Rect2(26, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_33gxk"]
atlas = ExtResource("6_o7pyx")
region = Rect2(52, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7nmx"]
atlas = ExtResource("6_o7pyx")
region = Rect2(78, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx4bd"]
atlas = ExtResource("6_o7pyx")
region = Rect2(104, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_brh2b"]
atlas = ExtResource("6_o7pyx")
region = Rect2(130, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vf7v"]
atlas = ExtResource("6_o7pyx")
region = Rect2(156, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqorx"]
atlas = ExtResource("6_o7pyx")
region = Rect2(182, 0, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cof1m"]
atlas = ExtResource("6_o7pyx")
region = Rect2(208, 0, 26, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_fud7u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwt3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8l7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33gxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7nmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx4bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brh2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vf7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqorx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cof1m")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="MainMenu" type="CanvasLayer" node_paths=PackedStringArray("background_music")]
script = ExtResource("1_uyc4y")
background_music = NodePath("Music/BackgroundMusic")

[node name="Menu" type="ColorRect" parent="."]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.25098, 0.25098, 1)

[node name="Container" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = -1
offset_left = 35.0
offset_top = 25.0
offset_right = 1113.0
offset_bottom = 605.0
color = Color(0.588235, 0.270588, 0.270588, 1)

[node name="Label" type="Label" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -420.0
offset_top = 20.0
offset_right = 420.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_akliq")
theme_override_font_sizes/font_size = 50
text = "CASTLE CLIMBER"

[node name="ButtonNew" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -254.0
offset_top = 120.0
offset_right = 246.0
offset_bottom = 220.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.85098, 0.54902, 0.541176, 1)
theme_override_fonts/font = ExtResource("2_akliq")
theme_override_font_sizes/font_size = 30
text = "NEW GAME"

[node name="ButtonLoad" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -254.0
offset_top = 240.0
offset_right = 246.0
offset_bottom = 340.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.85098, 0.54902, 0.541176, 1)
theme_override_fonts/font = ExtResource("2_akliq")
theme_override_font_sizes/font_size = 30
text = "LOAD GAME"

[node name="ButtonQuit" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -254.0
offset_top = 360.0
offset_right = 246.0
offset_bottom = 460.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.85098, 0.54902, 0.541176, 1)
theme_override_fonts/font = ExtResource("2_akliq")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="TileMap" type="TileMap" parent="Menu"]
tile_set = SubResource("TileSet_8xhiy")
format = 2
layer_0/tile_data = PackedInt32Array(2555908, 196608, 16, 2555909, 262144, 16, 2621442, 196608, 17, 2621443, 262144, 17, 2621444, 196608, 17, 2621445, 262144, 17, 2555910, 196608, 16, 2621446, 327680, 17, 2555911, 262144, 16, 2621447, 393216, 17, 2490375, 262144, 15, 2490376, 327680, 15, 2555912, 327680, 16, 2490377, 393216, 15, 2555913, 393216, 16, 2490378, 393216, 16, 2555914, 327680, 16, 2490379, 196608, 17, 2555915, 393216, 16, 2490380, 262144, 17, 2555916, 262144, 16, 2490381, 327680, 17, 2555917, 327680, 16, 2490382, 393216, 17, 2555918, 393216, 16, 2490383, 196608, 17, 2555919, 196608, 16, 2490384, 262144, 17, 2555920, 262144, 16, 2490385, 327680, 17, 2555921, 327680, 16, 2490386, 393216, 17, 2555922, 393216, 16, 2424850, 393216, 16, 2424851, 262144, 17, 2490387, 327680, 17, 2424852, 196608, 16, 2490388, 196608, 17, 2359314, 196608, 16, 2359315, 262144, 16, 2359316, 327680, 16, 2359317, 393216, 16, 2424853, 262144, 16, 2359318, 196608, 16, 2424854, 327680, 16, 2359319, 262144, 16, 2424855, 393216, 16, 2359320, 327680, 16, 2424856, 196608, 16, 2359321, 393216, 16, 2424857, 262144, 16, 2359322, 196608, 16, 2424858, 327680, 16, 2359323, 262144, 16, 2424859, 393216, 16, 2359324, 327680, 16, 2424860, 196608, 16, 2359325, 196608, 16, 2424861, 196608, 17, 2228254, 327680, 15, 2293790, 327680, 16, 2228255, 393216, 15, 2293791, 393216, 16, 2228256, 196608, 17, 2293792, 262144, 16, 2228257, 262144, 17, 2293793, 327680, 16, 2228258, 196608, 16, 2228259, 262144, 16, 1638468, 327680, 16, 1704004, 327680, 17, 1638469, 393216, 16, 1704005, 393216, 17, 1638470, 393216, 17, 1704006, 327680, 17, 1638471, 393216, 16, 1704007, 393216, 17, 1769540, 196608, 16, 1835076, 196608, 16, 1769541, 262144, 16, 1835077, 262144, 16, 1769542, 327680, 16, 1835078, 327680, 16, 1769543, 393216, 16, 1835079, 393216, 16, 1769536, 327680, 17, 1835072, 327680, 16, 1769537, 393216, 17, 1835073, 393216, 16, 1769538, 327680, 16, 1835074, 327680, 17, 1769539, 393216, 16, 1835075, 393216, 17, 1900608, 327680, 17, 1966144, 327680, 16, 1900609, 393216, 17, 1966145, 393216, 16, 1900610, 327680, 16, 1966146, 327680, 17, 1900611, 393216, 16, 1966147, 196608, 16, 2031680, 327680, 17, 2097216, 327680, 16, 2031681, 393216, 17, 2097217, 393216, 16, 2031682, 327680, 16, 2097218, 327680, 17, 2031683, 196608, 17, 2097219, 393216, 17, 2162752, 327680, 17, 2228288, 327680, 16, 2162753, 393216, 17, 2228289, 393216, 16, 2162754, 327680, 16, 2228290, 393216, 16, 2162755, 393216, 16, 2228291, 196608, 16, 1900613, 262144, 17, 1966149, 327680, 16, 1900614, 327680, 17, 1966150, 393216, 16, 1966151, 327680, 17, 1900612, 196608, 17, 1900615, 393216, 17, 1966148, 262144, 16, 2031684, 196608, 16, 2031685, 262144, 16, 2031686, 327680, 16, 2097220, 196608, 17, 2097221, 262144, 17, 2097222, 327680, 17, 2031687, 393216, 16, 2097223, 393216, 17, 1572931, 327680, 16, 1638467, 262144, 16, 1572932, 393216, 16, 1572933, 327680, 16, 1572934, 393216, 16, 1441858, 262144, 16, 1507394, 262144, 17, 1441859, 327680, 16, 1507395, 327680, 17, 1441860, 393216, 16, 1507396, 393216, 17, 1441861, 393216, 16, 1507397, 393216, 17, 1310785, 393216, 16, 1376321, 393216, 17, 1310786, 393216, 17, 1376322, 262144, 17, 1310787, 393216, 17, 1376323, 327680, 17, 1245249, 327680, 16, 1245250, 393216, 16, 1245251, 393216, 16, 1245248, 262144, 16, 1310784, 327680, 16, 2162756, 196608, 16, 2228292, 262144, 16, 2162757, 262144, 16, 2228293, 327680, 16, 2162758, 327680, 16, 2228294, 393216, 16, 2162759, 393216, 16, 2228295, 393216, 17, 2293828, 262144, 17, 2359364, 327680, 16, 2293829, 327680, 17, 2359365, 393216, 16, 2293830, 393216, 17, 2359366, 327680, 17, 2293831, 393216, 16, 2359367, 393216, 17, 2424900, 393216, 16, 2490436, 393216, 17, 2424901, 393216, 17, 2490437, 262144, 17, 2424902, 327680, 16, 2490438, 327680, 17, 2424903, 393216, 16, 2490439, 393216, 17, 2555972, 196608, 16, 2621508, 196608, 17, 2555973, 262144, 16, 2621509, 262144, 17, 2555974, 327680, 16, 2621510, 327680, 17, 2555975, 393216, 16, 2621511, 393216, 17, 2555968, 393216, 17, 2621504, 196608, 17, 2555969, 262144, 16, 2621505, 262144, 17, 2555970, 327680, 16, 2621506, 327680, 17, 2555971, 393216, 16, 2621507, 393216, 17, 2555964, 393216, 17, 2621500, 196608, 17, 2555965, 196608, 17, 2621501, 262144, 17, 2555966, 262144, 17, 2621502, 327680, 17, 2555967, 327680, 17, 2621503, 393216, 17, 2555960, 393216, 17, 2621496, 196608, 17, 2555961, 196608, 17, 2621497, 262144, 17, 2555962, 262144, 17, 2621498, 327680, 17, 2555963, 327680, 17, 2621499, 393216, 17, 2555956, 393216, 17, 2621492, 196608, 17, 2555957, 196608, 17, 2621493, 262144, 17, 2555958, 262144, 17, 2621494, 327680, 17, 2555959, 327680, 17, 2621495, 393216, 17, 2555952, 393216, 17, 2621488, 196608, 17, 2555953, 196608, 17, 2621489, 262144, 17, 2555954, 262144, 17, 2621490, 327680, 17, 2555955, 327680, 17, 2621491, 393216, 17, 2555948, 393216, 17, 2621484, 196608, 17, 2555949, 196608, 17, 2621485, 262144, 17, 2555950, 262144, 17, 2621486, 327680, 17, 2555951, 327680, 17, 2621487, 393216, 17, 2555944, 393216, 17, 2621480, 196608, 17, 2555945, 196608, 17, 2621481, 262144, 17, 2555946, 262144, 17, 2621482, 327680, 17, 2555947, 327680, 17, 2621483, 393216, 17, 2555940, 393216, 17, 2621476, 196608, 17, 2555941, 196608, 17, 2621477, 262144, 17, 2555942, 262144, 17, 2621478, 327680, 17, 2555943, 327680, 17, 2621479, 393216, 17, 2555936, 196608, 16, 2621472, 196608, 17, 2555937, 196608, 17, 2621473, 262144, 17, 2555938, 262144, 17, 2621474, 327680, 17, 2555939, 327680, 17, 2621475, 393216, 17, 2424864, 393216, 17, 2490400, 196608, 17, 2424865, 196608, 17, 2490401, 196608, 16, 2424866, 262144, 17, 2490402, 262144, 16, 2424867, 327680, 17, 2490403, 327680, 16, 2490396, 196608, 17, 2490397, 262144, 17, 2424862, 262144, 17, 2490398, 327680, 17, 2424863, 327680, 17, 2490399, 393216, 17, 2555932, 196608, 16, 2621468, 196608, 17, 2555933, 262144, 16, 2621469, 262144, 17, 2555934, 327680, 16, 2621470, 327680, 17, 2555935, 393216, 16, 2621471, 393216, 17, 2555928, 262144, 16, 2621464, 262144, 17, 2555929, 327680, 16, 2621465, 327680, 17, 2555930, 393216, 16, 2621466, 393216, 17, 2555931, 393216, 16, 2621467, 393216, 17, 2555927, 196608, 16, 2621463, 196608, 17, 2555923, 196608, 16, 2621459, 196608, 17, 2555924, 262144, 16, 2621460, 262144, 17, 2555925, 327680, 16, 2621461, 327680, 17, 2555926, 393216, 16, 2621462, 393216, 17, 2621455, 196608, 17, 2621456, 262144, 17, 2621457, 327680, 17, 2621458, 393216, 17, 2621451, 393216, 17, 2621452, 262144, 17, 2621453, 327680, 17, 2621454, 393216, 17, 2621448, 196608, 17, 2621449, 262144, 17, 2621450, 327680, 17, 2490389, 262144, 17, 2490390, 327680, 17, 2490391, 393216, 17, 2490392, 196608, 17, 2490393, 262144, 17, 2490394, 327680, 17, 2490395, 393216, 17, 1245247, 196608, 16, 1310783, 262144, 16, 1310779, 196608, 16, 1376315, 196608, 17, 1310780, 262144, 16, 1376316, 262144, 17, 1310781, 327680, 16, 1376317, 327680, 17, 1310782, 196608, 16, 1376318, 196608, 17, 1507385, 196608, 17, 1441850, 262144, 16, 1507386, 196608, 16, 1441851, 327680, 16, 1507387, 262144, 16, 1441852, 196608, 16, 1507388, 327680, 16, 1507384, 393216, 17, 1572920, 327680, 16, 2097196, 196608, 16, 2162732, 327680, 16, 2097197, 262144, 16, 2162733, 393216, 16, 2097198, 327680, 16, 2162734, 196608, 16, 2097199, 393216, 16, 2162735, 262144, 16, 2162728, 327680, 16, 2228264, 393216, 16, 2162729, 393216, 16, 2228265, 196608, 16, 2162730, 196608, 16, 2228266, 262144, 16, 2162731, 262144, 16, 2228267, 327680, 16, 2228261, 196608, 16, 2293797, 196608, 17, 2228262, 262144, 16, 2293798, 262144, 17, 2228263, 327680, 16, 2293799, 327680, 17, 2293800, 393216, 17, 2359329, 196608, 16, 2293794, 196608, 17, 2359330, 262144, 16, 2293795, 262144, 17, 2359331, 327680, 16, 2293796, 327680, 17, 2359332, 393216, 16, 2359327, 327680, 16, 2359328, 393216, 16, 2359326, 262144, 16, 2228260, 327680, 16, 2359334, 262144, 16, 2359335, 327680, 16, 2359336, 393216, 16, 2293801, 196608, 17, 2359337, 196608, 16, 2228268, 393216, 16, 2228269, 196608, 16, 2228270, 262144, 16, 2228271, 327680, 16, 2162736, 327680, 16, 2228272, 196608, 16, 2162737, 196608, 16, 2228273, 262144, 16, 2097200, 196608, 16, 2097201, 262144, 16, 2293802, 262144, 17, 2293803, 327680, 17, 2293804, 393216, 17, 2293805, 196608, 17, 2293806, 262144, 17, 2293807, 327680, 17, 2293808, 196608, 17, 2359333, 196608, 16, 2424869, 196608, 17, 2424870, 262144, 17, 2424871, 327680, 17, 2424872, 393216, 17, 2424868, 393216, 17, 2490404, 393216, 16, 2490405, 196608, 16, 2490406, 262144, 16, 2490407, 327680, 16, 2490408, 393216, 16, 2424873, 196608, 17, 2359338, 262144, 16, 2424874, 262144, 17, 2359339, 327680, 16, 2424875, 327680, 17, 2359340, 393216, 16, 2424876, 393216, 17, 2359341, 196608, 16, 2424877, 196608, 17, 2359342, 262144, 16, 2424878, 262144, 17, 2359343, 327680, 16, 2424879, 327680, 17, 2359344, 393216, 16, 2424880, 393216, 17, 2490413, 196608, 16, 2490414, 262144, 16, 2490415, 327680, 16, 2490416, 393216, 16, 2490409, 196608, 16, 2490410, 262144, 16, 2490411, 327680, 16, 2490412, 393216, 16, 2359345, 196608, 16, 2424881, 196608, 17, 2359346, 196608, 17, 2424882, 262144, 17, 2359347, 262144, 17, 2424883, 327680, 17, 2359348, 327680, 17, 2424884, 393216, 17, 2490417, 196608, 16, 2490418, 262144, 16, 2490419, 327680, 16, 2490420, 393216, 16, 2359349, 393216, 17, 2424885, 196608, 17, 2359350, 262144, 16, 2424886, 262144, 17, 2359351, 327680, 16, 2424887, 327680, 17, 2359352, 393216, 16, 2424888, 393216, 17, 2359353, 196608, 16, 2424889, 196608, 17, 2359354, 262144, 16, 2424890, 262144, 17, 2359355, 327680, 16, 2424891, 327680, 17, 2359356, 393216, 16, 2424892, 393216, 17, 2359357, 196608, 16, 2424893, 196608, 17, 2359358, 196608, 16, 2424894, 196608, 17, 2359359, 262144, 16, 2424895, 262144, 17, 2359360, 327680, 16, 2424896, 327680, 17, 2490421, 196608, 16, 2490422, 262144, 16, 2490423, 327680, 16, 2490424, 393216, 16, 2490425, 196608, 16, 2490426, 262144, 16, 2490427, 327680, 16, 2490428, 393216, 16, 2490429, 196608, 16, 2490430, 262144, 16, 2490431, 327680, 16, 2490432, 393216, 16, 2359361, 393216, 16, 2424897, 393216, 17, 2359362, 196608, 16, 2424898, 262144, 16, 2228287, 262144, 16, 2293823, 262144, 17, 2293824, 327680, 17, 2293825, 393216, 17, 2293826, 393216, 17, 2293827, 196608, 17, 2359363, 262144, 16, 2424899, 327680, 16, 2490433, 196608, 17, 2490434, 262144, 17, 2490435, 327680, 17, 2228286, 196608, 16, 2293822, 196608, 17, 2228282, 393216, 17, 2293818, 196608, 17, 2228283, 262144, 16, 2293819, 262144, 17, 2228284, 327680, 16, 2293820, 327680, 17, 2228285, 393216, 16, 2293821, 393216, 17, 2097210, 393216, 16, 2162746, 393216, 17, 2097211, 262144, 16, 2162747, 262144, 17, 2097212, 327680, 16, 2162748, 327680, 17, 2097213, 393216, 16, 2162749, 393216, 17, 1966138, 393216, 16, 2031674, 393216, 17, 1966139, 262144, 16, 2031675, 262144, 17, 1966140, 327680, 16, 2031676, 327680, 17, 1966141, 393216, 16, 2031677, 393216, 17, 1835066, 327680, 16, 1900602, 327680, 17, 1835067, 393216, 16, 1900603, 393216, 17, 1835068, 327680, 16, 1900604, 327680, 17, 1835069, 393216, 16, 1900605, 393216, 17, 1966142, 196608, 16, 2031678, 196608, 17, 1966143, 262144, 16, 2031679, 262144, 17, 2097214, 196608, 16, 2162750, 196608, 17, 2097215, 262144, 16, 2162751, 262144, 17, 1835070, 196608, 16, 1900606, 196608, 17, 1835071, 262144, 16, 1900607, 262144, 17, 1703998, 196608, 17, 1769534, 196608, 17, 1703999, 262144, 17, 1769535, 262144, 17, 1704000, 327680, 17, 1704001, 393216, 17, 1572926, 327680, 17, 1638462, 196608, 16, 1572927, 393216, 17, 1638463, 262144, 16, 1572928, 393216, 16, 1638464, 327680, 16, 1572929, 196608, 16, 1638465, 393216, 16, 1441854, 327680, 16, 1507390, 327680, 17, 1441855, 393216, 16, 1507391, 393216, 17, 1441856, 327680, 16, 1507392, 327680, 17, 1441857, 196608, 16, 1507393, 196608, 17, 1376319, 262144, 17, 1376320, 327680, 17, 1572925, 393216, 17, 1638461, 196608, 17, 1572930, 262144, 16, 1638466, 196608, 16, 1704002, 196608, 17, 1704003, 262144, 17, 1572924, 393216, 16, 1507389, 393216, 16, 1441853, 262144, 16, 1572922, 262144, 16, 1572923, 327680, 16, 1572921, 393216, 16, 1638457, 393216, 17, 1638458, 393216, 16, 1638459, 327680, 17, 1638460, 393216, 17, 1769528, 327680, 17, 1835064, 196608, 16, 1769529, 393216, 17, 1835065, 262144, 16, 1769530, 262144, 17, 1769531, 327680, 17, 1703994, 393216, 17, 1703995, 327680, 16, 1703996, 393216, 16, 1769532, 393216, 17, 1703997, 393216, 16, 1769533, 393216, 17, 1703993, 393216, 16, 1638455, 393216, 15, 1703991, 393216, 16, 1638456, 327680, 17, 1703992, 327680, 16, 1769526, 327680, 15, 1769527, 393216, 15, 1835062, 327680, 16, 1835063, 393216, 16, 1900598, 327680, 15, 2097202, 327680, 16, 2097203, 393216, 16, 2097204, 196608, 16, 2162738, 196608, 16, 2162739, 262144, 16, 2162740, 327680, 16, 2228274, 327680, 16, 2228275, 393216, 16, 2228276, 262144, 16, 2293810, 327680, 17, 2293811, 393216, 17, 2293812, 262144, 17, 2293813, 327680, 17, 2162741, 196608, 17, 2228277, 327680, 16, 2228278, 196608, 16, 2293814, 196608, 17, 2293809, 262144, 17, 2228279, 196608, 17, 2293815, 262144, 17, 2228280, 262144, 17, 2293816, 327680, 17, 2228281, 327680, 17, 2293817, 393216, 17, 2097205, 262144, 16, 2097206, 327680, 16, 2162742, 262144, 17, 2097207, 393216, 16, 2162743, 196608, 17, 2097208, 262144, 16, 2162744, 262144, 17, 2031670, 327680, 15, 2031671, 393216, 15, 2031672, 262144, 17, 2031673, 327680, 17, 2097209, 327680, 16, 1966134, 327680, 16, 1966135, 393216, 16, 1900599, 393216, 15, 1900600, 196608, 17, 1966136, 262144, 16, 1900601, 262144, 17, 1966137, 327680, 16, 2162745, 327680, 17, 1638454, 327680, 15, 1703990, 327680, 16, 1638452, 196608, 15, 1703988, 196608, 16, 1638453, 262144, 15, 1703989, 262144, 16, 1769524, 196608, 15, 1835060, 196608, 16, 1769525, 262144, 15, 1835061, 262144, 16, 1900596, 196608, 15, 1966132, 196608, 16, 1900597, 262144, 15, 1966133, 262144, 16, 2031668, 196608, 15, 2031669, 262144, 15, 2031664, 196608, 15, 2031665, 262144, 15, 2031666, 327680, 15, 2031667, 393216, 15, 2031660, 196608, 15, 2031661, 262144, 15, 2031662, 327680, 15, 2031663, 393216, 15, 2031656, 196608, 15, 2097192, 196608, 16, 2031657, 262144, 15, 2097193, 262144, 16, 2031658, 327680, 15, 2097194, 327680, 16, 2031659, 393216, 15, 2097195, 393216, 16, 2490374, 196608, 15, 2228252, 196608, 15, 2293788, 196608, 16, 2228253, 262144, 15, 2293789, 262144, 16, 2228248, 196608, 15, 2293784, 196608, 16, 2228249, 262144, 15, 2293785, 262144, 16, 2228250, 327680, 15, 2293786, 327680, 16, 2228251, 393216, 15, 2293787, 393216, 16)

[node name="AnimatedPig" type="AnimatedSprite2D" parent="Menu"]
position = Vector2(165, 579)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_pxicx")
autoplay = "default"

[node name="AnimatedKing" type="AnimatedSprite2D" parent="Menu"]
position = Vector2(1065, 265)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_yra7j")
autoplay = "default"

[node name="AnimatedPig2" type="AnimatedSprite2D" parent="Menu"]
position = Vector2(160, 521)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_fud7u")
autoplay = "default"

[node name="Music" type="Node2D" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("7_owier")

[connection signal="pressed" from="Menu/Container/ButtonNew" to="." method="_on_button_new_pressed"]
[connection signal="pressed" from="Menu/Container/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="Menu/Container/ButtonQuit" to="." method="_on_button_quit_pressed"]
